refactor: 리소스 생성에 대한 응답을 201으로 변경
