# openapi.yaml
@@ -49,7 +49,7 @@ paths:
             schema:
               $ref: '#/components/schemas/UserRequest'
       responses:
-        '200':
+        '201':
           description: Created
           content:
             application/json:
@@ -180,7 +180,7 @@ paths:
             schema:
               $ref: '#/components/schemas/UserProfileRequest'
       responses:
-        '200':
+        '201':
           description: Created
           content:
             application/json:
@@ -208,7 +208,7 @@ paths:
             schema:
               $ref: '#/components/schemas/InBodyRecordMeRequest'
       responses:
-        '200':
+        '201':
           description: Created
           content:
             application/json:
@@ -264,7 +264,7 @@ paths:
             schema:
               $ref: '#/components/schemas/ExerciseRequest'
       responses:
-        '200':
+        '201':
           description: Created
           content:
             application/json:
@@ -371,7 +371,7 @@ paths:
             schema:
               $ref: '#/components/schemas/RoutineRequest'
       responses:
-        '200':
+        '201':
           description: Created
           content:
             application/json:
@@ -474,7 +474,7 @@ paths:
             schema:
               $ref: '#/components/schemas/WorkoutRequest'
       responses:
-        '200':
+        '201':
           description: Created
           content:
             application/json:
@@ -1693,3 +1693,4 @@ components:
     UserAction:
       type: string
       enum: [SAVE_IMMEDIATE, SAVE_LATER, SKIP_SAVE]
+
